@@ -1,4 +1,7 @@
 
+2009-03-23 21:54 Ali aliov@xfce.org 
+	 * : Support for panel floating position when showing up the brightness popup
+
 2009-03-23 20:55 Ali aliov@xfce.org 
 	 * : Fix a crash in the inhibit plugin when the running power manager disappears from the session bus
 
